--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -139,7 +139,7 @@ jobs:
             echo "1. Create a GitHub App in your organization:"
             echo "   https://github.com/organizations/${{ github.repository_owner }}/settings/apps/new"
             echo "2. Grant the app these permissions:"
-            echo "   - Repository permissions: Contents (Read), Issues (Write), Pull requests (Write)"
+            echo "   - Repository permissions: Contents (Read & Write), Issues (Write), Pull requests (Write)"
             echo "   - Organization permissions: None needed"
             echo "3. Install the app on this repository"
             echo "4. Add the App ID as a repository secret: E2E_GITHUB_APP_ID"
@@ -160,6 +160,16 @@ jobs:
             exit 1
           }
           echo "✅ Kaito backend is accessible from self-hosted runner"
+          
+          echo "🔍 Debugging GitHub App token permissions..."
+          echo "App ID: ${{ secrets.E2E_GITHUB_APP_ID }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Testing token permissions..."
+          
+          # Test token permissions by trying to read repository info
+          curl -H "Authorization: Bearer ${{ steps.app_token.outputs.token }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               "https://api.github.com/repos/${{ github.repository }}" | jq '.permissions // "No permissions field found"'
           
           echo "🧪 Running E2E test with built Docker image..."
           echo "Image: ${{ steps.image_tag.outputs.image_tag }}"
