feat: Add correct target to docker build

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -127,7 +127,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile.github_action
+          file: ./docker/Dockerfile
+          target: github_app
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
