--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,10 +1,11 @@
+# disabled. We might run it manually if needed.
 name: pre-commit
 
 on:
   workflow_dispatch:
-  pull_request:
-  push:
-    branches: [main]
+#  pull_request:
+#  push:
+#    branches: [main]
 
 jobs:
   pre-commit:
