--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -79,7 +79,9 @@ jobs:
         with:
           app-id: ${{ secrets.E2E_GITHUB_APP_ID }}
           private-key: ${{ secrets.E2E_GITHUB_APP_PRIVATE_KEY }}
-          # Let the action auto-detect from context - simplest approach
+          # For organization apps, specify owner and repositories
+          owner: ${{ github.repository_owner }}
+          repositories: ${{ github.event.repository.name }}
 
       - name: Install E2E test dependencies
         run: |
