Configuration for valid branches and ignore dirs

--- a/pr_agent/settings/configuration.toml
+++ b/pr_agent/settings/configuration.toml
@@ -370,3 +370,5 @@ pr_commands = [
 [kaitoragengine]
 use_rag_engine=false
 rag_engine_url=""
+enabled_base_branches = ["main"]
+ignore_directories = [".github/"]
