--- a/deploy/agc/applicationloadbalancer.yaml
+++ b/deploy/agc/applicationloadbalancer.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: alb-test-infra
+  name: alb-infra
 ---
 apiVersion: alb.networking.azure.io/v1
 kind: ApplicationLoadBalancer
 metadata:
-  name: alb-test
-  namespace: alb-test-infra
+  name: pr-agent-alb
+  namespace: alb-infra
 spec:
   associations:
   - $ALB_SUBNET_ID
